# Kronos

./: .gitignore  pyproject.toml  requirements.txt
examples/demo/: index.html  style.css
kronos/finetune/: dataset.py  qlib_data_preprocess.py  train_predictor.py  train_tokenizer.py
kronos/finetune_csv/: finetune_base_model.py  train_sequential.py
kronos/tools/: bitcon_prodiction_demo.py  old_get_data.py  prediction_CLI.py  prediction_GUI.py  prediction_bitcon_hour.py  prediction_common.py  prediction_stock_5min.py  run_backtest_kronos.py  simple_prediction_batch.py  simple_prediction_no_vol.py  simple_prediction_one.py  simple_prediction_stock.py  stock_data_fetcher.py
src/finetune/: qlib_test.py
src/finetune_csv/: finetune_tokenizer.py
src/tools/: get_data_all.py  get_data_by_years.py  prediction_akshare_2024-2025.py  prediction_batch_example.py  prediction_cn_markets_day.py  prediction_example.py  prediction_new.py  prediction_new_GUI.py  prediction_one.py  prediction_wo_vol_example.py  run_backtest_kronos.py
tests/: test_kronos_regression.py
tests/data/: generate_regression_output.py
webui/: app.py  run.py
